deploy/infrastructure/kube-prom-stack/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - "grafana.playground.local"
  gateways:
  - istio-gateway/playground-local-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kube-prometheus-stack-grafana
        port:
          number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
  - "prometheus.playground.local"
  gateways:
  - istio-gateway/playground-local-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kube-prometheus-stack-prometheus
        port:
          number: 8080
